benefits/static/css/styles.css
/* ... */
.card:hover {
  border-top: solid var(--card-border-width) var(--hover-color);
}

.card .card-title {
  font-size: var(--card-title-font-size);
  line-height: var(--card-title-line-height);
  letter-spacing: var(--card-title-letter-spacing);
}

.card .card-body {
  padding: 0 var(--card-body-x-padding) !important;
}

/* Modal Dialogs */

:root {
  --modal-title-font-size: var(--font-size-24px);
  --modal-border-radius: 8px;
}

@media (min-width: 992px) {
  :root {
    --modal-title-font-size: var(--font-size-35px);
    --modal-border-radius: 4px;
  }
}

.btn-close {
  width: 20px;
  height: 20px;
  opacity: 1;
  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23323A45'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
    center/1em auto no-repeat;
}

.modal-dialog {
  width: auto;
  height: auto;
}

.modal-content {
  border-radius: var(--modal-border-radius);
}

/* This is to stop Bootstrap from shifting the page behind the modal - see https://stackoverflow.com/q/32862394 */
.modal-open {
  padding-right: 0 !important;
}

.modal-dialog * {
  color: var(--text-primary-color);
}

.btn-close {
  color: var(--text-primary-color);
}

.modal-title {
  font-size: var(--modal-title-font-size);
}

/* Modal Trigger */
/* All links/image buttons that open modals have a question mark icon after them */
/* Buttons that open modals (like the Agency Selector) do not have the icon */

[data-bs-toggle="modal"]:not(.btn)::after {
  content: " ";
  background-image: url("/static/img/modal-trigger.svg");
  background-size: contain;
  display: inline-block;
  width: 22px;
  height: 22px;
  margin-left: 2px;
  vertical-align: text-bottom;
}

[data-bs-toggle="modal"]:not(.btn):hover::after {
  background-image: url("/static/img/modal-trigger--hover.svg");
}

[data-bs-toggle="modal"]:not(.btn):visited::after {
  background-image: url("/static/img/modal-trigger--selected.svg");
}

/* Enrollment Success */
/* Custom in-line log out button for Enrollment Success, in paragraph */

:root {
  --success-illo-width: 180px;
  --success-illo-height: 155.1px;
}

@media (min-width: 992px) {
  :root {
    --success-illo-width: 345px;
    --success-illo-height: 297px;
  }
}

.enrollment-success .illo {
  width: var(--success-illo-width);
  height: var(--success-illo-height);
}

/* Index and Agency Index (Landing pages) */
/* These pages have a full-width and full-height background image, creating the need to re-set the Footer margin top to 0 */

:root {
  --landing-main-height: calc(100vh - 80px); /* Header Height (80px) */
  --landing-background: url("/static/img/benefits-bg-mobile.jpg") no-repeat
    var(--primary-color);
  --landing-box-background: var(--bs-white);
  --landing-box-border: 12px solid var(--primary-color);
  --landing-text-color: var(--text-primary-color);
  --agency-index-box-background: var(--bs-white);
  --agency-index-box-border: 12px solid var(--primary-color);
  --agency-index-text-color: var(--text-primary-color);
  --landing-page-x-margin: auto;
}

@media (min-width: 992px) {
  :root {
    --landing-main-height: calc(
      100vh - 130px
    ); /* 130px = Header Height (80px) + (Footer Link (50px) */
    --landing-background: url("/static/img/benefits-bg-desktop.jpg") no-repeat;
    --landing-box-background: transparent;
    --landing-box-border: none;
    --landing-text-color: var(--bs-white);
    --landing-page-x-margin: 0;
  }
}

.landing main#main-content {
  background: var(--landing-background);
  background-size: cover;
}

.landing main#main-content .container .row:first-child {
  min-height: var(--landing-main-height);
}

.landing .box {
  background: var(--landing-box-background);
  border-top: var(--landing-box-border);
  color: var(--landing-text-color);
  margin-bottom: calc(32rem / 16);
}

.landing .box .btn.btn-lg.btn-primary {
  width: 250px; /* Button is 250 x 72 */
  display: block;
  margin: 0 var(--landing-page-x-margin);
  padding: 19px 0; /* Button is 250 x 72 */
}

.landing footer {
  margin-top: 0;
}

/* Agency Selector */

#agency-selector .modal-body {
  padding: 0;
}

#agency-selector .card img {
  margin-right: -1px;
}

#agency-selector .col:first-child .card {
  margin-top: 2rem;
}

#agency-selector .col:last-child .card {
  margin-bottom: 2rem;
}

